@@ -981,10 +981,6 @@ special instructions at specific points in a long form.
 
 =back
 
-B<Known BUG:> If you include an odd number of C<'> or C<"> characters in a
-C<!description> or C<!note>, then that directive will mistakenly be skipped.
-This is a bug casued by me taking a shortcut in the parser C<:-/>
-
 =head2 Fields
 
 First, a note about multiword strings in the fields. Anywhere where it says
@@ -1161,7 +1157,7 @@ Any line beginning with a C<#> is considered a comment.
 
 =head1 TODO
 
-Improve the commmand line tools
+Document the commmand line tool
 
 Allow renaming of the submit button; allow renaming and inclusion of a 
 reset button
@@ -1191,10 +1187,6 @@ C<!include> directive to include external formspec files
 Better tests!
 
 =head1 BUGS
-
-Having a single C<'> or C<"> in a C<!description> or C<!note> directive causes that
-directive to get skipped. This is an issue with the C<perl_codeblock> shortcut in
-Parse::RecDescent.
 
 Creating two $parsers in the same script causes the second one to get the data
 from the first one.
