@@ -2,6 +2,8 @@ Release history for Text::FormBuilder.
 
 0.09
     * single-line textfields can be given a maxlength
+    * BUGFIX: !note and !description blocks can now
+      contain "unbalanced" quotes (fixed the gramamr)
     
 0.08 - 10 Jan 2005
     * failure to load Perl::Tidy is no longer fatal
